# FreeFormHolders

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLIBIGL.cmake
include/: main.h  model_path.h
src/: main.cpp
src/geodesic_distance/: example0.cpp  example1.cpp  geodesic_matlab_api.cpp
